After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683751 - Unable to drag multiple row selections
Unable to drag multiple row selections
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: List View
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 683741 684479 685844 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-09-10 21:57 UTC by William Jon McCann
Modified: 2012-10-10 21:22 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description William Jon McCann 2012-09-10 21:57:29 UTC
I noticed that recently we broke the ability to drag multiple rows in the treeview.

1. Start ./testtreeview
2. Choose "multiple" selection
3. Select 3 rows
4. Click and hold down mouse button on a selected row and start to drag

You expect to see 3 rows dragged but the selection is cleared to the clicked row.
Comment 1 William Jon McCann 2012-09-10 22:28:35 UTC
*** Bug 683741 has been marked as a duplicate of this bug. ***
Comment 2 Cosimo Cecchi 2012-09-20 19:11:34 UTC
*** Bug 684479 has been marked as a duplicate of this bug. ***
Comment 3 Matthias Clasen 2012-09-21 12:12:59 UTC
Have you seen this work, ever ?

testtreeview uses gtk_tree_view_enable_model_drag_source/dest.

See bug 70479

If you want halfway working multi-row dnd, there some code in libegg
Comment 4 Cosimo Cecchi 2012-10-09 21:22:39 UTC
*** Bug 685844 has been marked as a duplicate of this bug. ***
Comment 5 Cosimo Cecchi 2012-10-10 21:21:43 UTC
-> nautilus

Turns out we're using egg multi-row dnd already, but a regression broke it.
Comment 6 Cosimo Cecchi 2012-10-10 21:22:31 UTC
Pushed a fix.