list-view: don't call parent when the row has been selected

This is a regression from commit
0b9ddf8826d68325f3070723e73177f134bc8b1f, which broke dragging multiple
rows.

https://bugzilla.gnome.org/show_bug.cgi?id=683751